# name-generator-rs

./: .gitignore  Cargo.toml  README.md  README_COMPLEX_PATTERNS.md
examples/: complex_pattern_test.rs  language_profile_demo.rs  lua_demo.rs  lua_profile_demo.rs  pattern_demo.rs  performance_benchmark.rs  profile_comparison.rs
languages/: common.lua  english.yml  german.lua  german.yml  lua_example.yml
src/: anatomy.rs  core.rs  language.rs  lib.rs  macros.rs  mod.rs  pattern.rs  phonetic_rules.rs  phonology.rs  syllables.rs  symbol_types.rs  symbols.rs
src/anatomy/: builder.rs  errors.rs  speaker.rs
src/categories/: complex_pattern_example.rs  examples.rs  mod.rs  profile_examples.rs  test_macro.rs
src/generators/: lua_profile_generator.rs  mod.rs  profile_generator.rs
src/language_profile/: loader.rs  lua_loader.rs  lua_profile.rs  mod.rs  profile.rs
src/phonetics/: ipa.rs  mod.rs  phoneme.rs
src/phonology/: builder.rs  consonants.rs  errors.rs  macros.rs  phonemes.rs  validation.txt  vowels.rs
src/phonology/consonants/: clicks.rs  ejectives.rs  implosives.rs  pulmonics.rs
src/scripting/: lua_engine.rs  mod.rs
src/syllables/: builder.rs  coda.rs  errors.rs  nucleus.rs  onset.rs  patterns.rs
src/syllables/errors/: coda.rs  nucleus.rs  onset.rs  pattern.rs  syllable_config.rs  utilities.rs
src/validation/: errors.rs  mod.rs  traits.rs
tests/: comprehensive_lua_test.rs  enhanced_profiles_test.rs  lua_integration_test.rs  lua_profile_tests.rs  lua_rules_test.rs
