[package]
name = "name_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand_chacha = "0.3"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
thiserror = "1.0"
indexmap = "2.0"
colored = "2.1.0"
anyhow = "1.0"

[lib]
